--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>FoodSta</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 <link rel="stylesheet" href="./sass/main.css">
    
@@ -17,19 +19,19 @@
     <!--Header-->
     <header>
 
-        <div class="container">
+        <div class="container-header">
         <a href="">
         <img src="" alt="">
         </a>
-<nav>
-    <ul>
-        <li><a href=""></a>Home</li>
-        <li><a href=""></a>About</li>
-        <li><a href=""></a>Service</li>
-        <li><a href=""></a>Menu<li>
-        <li><a href=""></a>Contact</li>
+<nav class="header__nav">
+    <ul class="header__nav--list">
+        <li class="header__nav--item"><a href="" class="nav--item">Home</a></li>
+        <li class="header__nav--item"><a href="" class="nav--item">About</a></li>
+        <li class="header__nav--item"><a href="" class="nav--item">Service</a></li>
+        <li class="header__nav--item"><a href="" class="nav--item">Menu</a><li>
+        <li class="header__nav--item"><a href="" class="nav--item">Contact</a></li>
     </ul>
-    <button type="button">Order Now</button>
+    <button type="button" class="button-nav">Order Now</button>
 </nav>
 
         </div>
