--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header>
 
         <div class="container-header">
-        <a href="">
-        <img src="" alt="">
+        <a href="" class="header--logo">
+        <img src="./images/logo.svg" alt="">
         </a>
 <nav class="header__nav">
     <ul class="header__nav--list">
@@ -31,7 +31,7 @@
         <li class="header__nav--item"><a href="" class="nav--item">Menu</a><li>
         <li class="header__nav--item"><a href="" class="nav--item">Contact</a></li>
     </ul>
-    <button type="button" class="button-nav">Order Now</button>
+    <button type="button" class="button--nav">Order Now</button>
 </nav>
 
         </div>
@@ -43,37 +43,53 @@
         <!--Hero-->
         <section class="section">
             <div class="container">
-            <h1>Enjoy Your Favorite Food From Anywhere</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
-            <button type="button">Order Now</button>
+            <div class="hero--wrap">
+            <h1 class="hero--header">Enjoy Your Favorite Food From Anywhere</h1>
+            <p class="hero--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+            <button type="button" class="button--hero">Order Now</button>
+            </div>
+
+            <div class="hero--wrap--foto">
+            <img src="./images/Foto-hero.jpg" alt="food" width="528px" height="528px" class="foto--hero">
+
+            </div>
         </div>
         </section>
 
         <!--Offerings-->
 
-        <section class="section">
-            <div>
-            <h2>What’s Special About Our Offerings</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
-            <div>
-            <h3>Fasest Delivery</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+        <section class="section-offerings">
+            <div class="container-offerings">
+           <div class="container-offerings-foto">
+            <img src="./images/apple-offers.jpg" alt="apple-offers" width="550px" height="604px" class="foto--offer">
+
+           </div>
+            <div class="container-offerings-wrap">
+            <h2 class="offerings--header">What’s Special About Our Offerings</h2>
+            <p class="offerings--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+            <div class="offerings--wrap">
+            <div class="wrap--delivery">
+            <h3 class="offerings--header--second">Fasest Delivery</h3>
+            <p class="offerings--text--second">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
             </div>
-            <div>
-            <h3>Easy to order</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+            <div class="wrap--order">
+            <h3 class="offerings--header--second">Easy to order</h3>
+            <p class="offerings--text--second">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
             </div>
-            <button type="button">Order Now</button>
-            <a href="">Read More</a>
+            </div>
+
+            <button type="button" class="button--offerings">Order Now</button>
+            
+            </div>
         </div>
         </section>
 
         <!--Favorites-->
 
-        <section class="section">
-            <div class="container">
-               <h2> Some of Our Favorites</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="section--favorites">
+            <div class="container--favorites">
+               <h2 class="favorites--header"> Some of Our Favorites</h2>
+               <p class="favorites--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                <ul>
                 <li><picture></picture></li>
