--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <!--Hero-->
-        <section class="section">
+        <section class="section-hero">
             <div class="container">
             <div class="hero--wrap">
             <h1 class="hero--header">Enjoy Your Favorite Food From Anywhere</h1>
@@ -91,36 +91,38 @@
                <h2 class="favorites--header"> Some of Our Favorites</h2>
                <p class="favorites--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-               <ul>
-                <li><picture></picture></li>
-                <li><picture></picture></li>
-                <li><picture></picture></li>
-                <li><picture></picture></li>
-                <li><picture></picture></li>
-                <li><picture></picture></li>
+               <ul class="favorites--list">
+                <li class="favorites--item"><picture>
+                    <img src="./images/gamburger.jpg" alt="" class="img-favorites">
+                </picture></li>
+                <li class="favorites--item"><picture><img src="./images/pasta.jpg" alt="" class="img-favorites"></picture></li>
+                <li class="favorites--item"><picture><img src="./images/pizza.jpg" alt="" class="img-favorites"></picture></li>
+                <li class="favorites--item"><picture><img src="./images/chicken.jpg" alt="" class="img-favorites"></picture></li>
+                <li class="favorites--item"><picture><img src="./images/salat.jpg" alt="" class="img-favorites"></picture></li>
+                <li class="favorites--item"><picture><img src="./images/borshch.jpg" alt="" class="img-favorites"></picture></li>
                </ul>
             </div>
         </section>
          <!--Customers-->
-<section class="section">
-    <div class="container">
-        <h2>What our Customers Say</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div>
-        <svg></svg>
-        <p>“The Best app I have used to order food in a while, so many options to choose from too, I would recommend to a freind, No questions asked”</p>
-        <h3>Sumith Shah</h3>
-        <p>Some Dude</p>
-    
+<section class="section--customers">
+    <div class="container--customers">
+        <h2 class="customers--header">What our Customers Say</h2>
+        <p class="customers--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="customers--wrap">
+        
+        <div class="customers--wrap--item">
+        <p class="customers--text">“The Best app I have used to order food in a while, so many options to choose from too, I would recommend to a freind, No questions asked”</p>
+        <h3 class="customers--name">Sumith Shah</h3>
+        <p class="customers--position">Some Dude</p>
     </div>
-        <div>
-            <svg></svg>
-            <p>“The ease with which I can just go in and order what i want was amazing, It has been a very pleasant experience ordering from this app”</p>
-        <h3>Sumith Shah</h3>
-        <p>Some Dude</p>
-
+   
+        <div class="customers--wrap--item">  
+        <p class="customers--text">“The ease with which I can just go in and order what i want was amazing, It has been a very pleasant experience ordering from this app”</p>
+        <h3 class="customers--name">Sumith Shah</h3>
+        <p class="customers--position">Some Dude</p>
         </div>
-    </div>
+   
+     </div>
 </section>
 
 <!--Subscribe-->
