--- a/index.html
+++ b/index.html
@@ -112,14 +112,21 @@
         
         <div class="customers--wrap--item">
         <p class="customers--text">“The Best app I have used to order food in a while, so many options to choose from too, I would recommend to a freind, No questions asked”</p>
+        <div class="customers--wrap--right">
+       <picture><img src="./images/boy.jpg" alt=""></picture>
         <h3 class="customers--name">Sumith Shah</h3>
         <p class="customers--position">Some Dude</p>
+        </div>
     </div>
    
         <div class="customers--wrap--item">  
         <p class="customers--text">“The ease with which I can just go in and order what i want was amazing, It has been a very pleasant experience ordering from this app”</p>
+        <div class="customers--wrap--left">
+        <picture><img src="./images/girl.jpg" alt=""></picture>
         <h3 class="customers--name">Sumith Shah</h3>
         <p class="customers--position">Some Dude</p>
+       </div>
+
         </div>
    
      </div>
