--- a/index.html
+++ b/index.html
@@ -111,20 +111,24 @@
         <div class="customers--wrap">
         
         <div class="customers--wrap--item">
-        <p class="customers--text">“The Best app I have used to order food in a while, so many options to choose from too, I would recommend to a freind, No questions asked”</p>
-        <div class="customers--wrap--right">
-       <picture><img src="./images/boy.jpg" alt=""></picture>
+        <p class="customers--text--wrap">“The Best app I have used to order food in a while, so many options to choose from too, I would recommend to a freind, No questions asked”</p>
+        <div class="customers--wrap-foto">
+       <picture><img src="./images/boy.jpg" alt="" class="image"></picture>
+       <div class="wrap--name">
         <h3 class="customers--name">Sumith Shah</h3>
         <p class="customers--position">Some Dude</p>
+        </div>
         </div>
     </div>
    
         <div class="customers--wrap--item">  
-        <p class="customers--text">“The ease with which I can just go in and order what i want was amazing, It has been a very pleasant experience ordering from this app”</p>
-        <div class="customers--wrap--left">
-        <picture><img src="./images/girl.jpg" alt=""></picture>
+        <p class="customers--text--wrap">“The ease with which I can just go in and order what i want was amazing, It has been a very pleasant experience ordering from this app”</p>
+        <div class="customers--wrap-foto">
+        <picture><img src="./images/girl.jpg" alt="" class="image"></picture>
+        <div class="wrap--name">
         <h3 class="customers--name">Sumith Shah</h3>
         <p class="customers--position">Some Dude</p>
+        </div>
        </div>
 
         </div>
@@ -133,14 +137,19 @@
 </section>
 
 <!--Subscribe-->
-<section class="section">
-    <div class="container">
-    <h2>Subscribe To Get Special Offers</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+<section class="section-subscribe">
+    <div class="container-subscribe">
+    <div class="subscribe-wrap">
+    <h2 class="subscribe-header">Subscribe To Get Special Offers</h2>
+    <p class="subscribe-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
     <form action="">
-        <input type="text" placeholder="Enter your email">
-        <button type="button">Subscribe</button>
+        <input type="text" placeholder="Enter your email" class="subscribe-input">
+        <button type="button" class="button-sub">Subscribe</button>
     </form>
+    </div>
+    <div class="subscribe-wrap-foto">
+        <img src="./images/banan.jpg" alt="" width="608px" height="266px">
+    </div>
 </div>
 </section>
 
