--- a/index.html
+++ b/index.html
@@ -148,33 +148,38 @@
     </form>
     </div>
     <div class="subscribe-wrap-foto">
-        <img src="./images/banan.jpg" alt="" width="608px" height="266px">
+        <img src="./images/banan.png" alt="" width="608px" height="266px">
     </div>
 </div>
 </section>
 
 <!--Footer-->
-<footer class="section">
-<div class="container">
-        <a href="">
-        <img src="" alt="">
+<footer class="section--footer">
+<div class="container--footer">
+    <div class="footer-wrap-logo">
+    <div class="nav-logo">
+        <a href="" class="header--logo">
+        <img src="./images/logo.svg" alt="">
         </a>
 <nav>
-    <ul>
-        <li><a href=""></a>Home</li>
-        <li><a href=""></a>About</li>
-        <li><a href=""></a>Service</li>
-        <li><a href=""></a>Menu<li>
-        <li><a href=""></a>Contact</li>
+    <ul class="footer-nav-list">
+        <li class="footer-nav-item"><a href="" class="nav-item"></a>Home</li>
+        <li class="footer-nav-item"><a href="" class="nav-item"></a>About</li>
+        <li class="footer-nav-item"><a href="" class="nav-item"></a>Service</li>
+        <li class="footer-nav-item"><a href="" class="nav-item"></a>Menu<li>
+        <li class="footer-nav-item"><a href="" class="nav-item"></a>Contact</li>
     </ul>
 </nav>
+</div>
+</div>
+<div class="footer-wrap-sub">
 <h2>Subscribe</h2>
  <form action="">
         <input type="text" placeholder="Enter your email">
         <button type="button">Subscribe</button>
     </form>
     <p>By subscribing you agree to with our Privacy Policy</p>
-</div>
+
 
 <div>
 <ul>
@@ -184,7 +189,7 @@
 
 </ul>
 <p>2022 FoodSta. All right reserved.</p>
-
+</div>
 </div>
 </footer>
 
