--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-<link rel="stylesheet" href="./sass/main.css">
+<link rel="stylesheet" href="./css/main.css">
    
 </head>
 <body>
@@ -156,12 +156,12 @@
 <!--Footer-->
 <footer class="section--footer">
 <div class="container--footer">
+    <div class="footer-wrap">
     <div class="footer-wrap-logo">
-    <div class="nav-logo">
         <a href="" class="header--logo">
         <img src="./images/logo.svg" alt="">
         </a>
-<nav>
+<nav class="nav-footer">
     <ul class="footer-nav-list">
         <li class="footer-nav-item"><a href="" class="nav-item"></a>Home</li>
         <li class="footer-nav-item"><a href="" class="nav-item"></a>About</li>
@@ -171,24 +171,23 @@
     </ul>
 </nav>
 </div>
-</div>
-<div class="footer-wrap-sub">
-<h2>Subscribe</h2>
- <form action="">
-        <input type="text" placeholder="Enter your email">
-        <button type="button">Subscribe</button>
+<div class="footer-sub">
+<h2 class="header-sub">Subscribe</h2>
+ <form action="" >
+        <input type="text" placeholder="Enter your email" class="subscribe-input">
+        <button type="button" class="but-sub">Subscribe</button>
     </form>
-    <p>By subscribing you agree to with our Privacy Policy</p>
-
-
-<div>
-<ul>
-    <li>Privacy Policy</li>
-    <li>Terms of Service</li>
-    <li>Cookies Settings</li>
+    <p class="footer-text">By subscribing you agree to with our <a href="" class="policy-link">Privacy Policy</a> </p>
+</div>
+</div>
+<div class="footer-policy">
+<ul class="list-policy">
+    <li class="list-policy-item"> <a href="" class="list-policy-link">Privacy Policy</a></li>
+    <li class="list-policy-item"> <a href="" class="list-policy-link">Terms of Service</a></li>
+    <li class="list-policy-item"> <a href="" class="list-policy-link">Cookies Setting</a></li>
 
 </ul>
-<p>2022 FoodSta. All right reserved.</p>
+<p class="footer-text">2022 FoodSta. All right reserved.</p>
 </div>
 </div>
 </footer>
