--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
     </ul>
     <button type="button" class="button--nav">Order Now</button>
 </nav>
+ <button class="menu-toggle js-open-menu" 
+         aria-expanded="false"
+         aria-controls="menu-container"
+         data-menu-button >
+            <svg width="40" height="40" aria-label="переключатель мобильного меню" class="icon-menu">
+        <use href="./images/symbol-defs.svg#icon-menu"></use> 
+            </svg>
+        </button>
 
         </div>
-
-
-
     </header>
     <main>
         <!--Hero-->
@@ -191,9 +196,33 @@
 </div>
 </div>
 </footer>
+<!--моб меню-->
+<div class="menu-container js-menu-container" id="mobile-menu">
 
+ <button class="menu-toggle js-close-menu"
+         aria-expanded="false"
+         aria-controls="menu-container">
 
+            <svg width="40" height="40" aria-label="переключатель мобильного меню">
+                <use class="icon-close-black" href="./images/symbol-defs.svg#icon-close-black"></use></svg></button>
+    <ul class="mobile-menu" >
+        <li class="mobile-menu-item"> <a href="index.html" class="mobile-menu-link">Home</a></li>
+        <li class="mobile-menu-item"> <a href="porfolio.html" class="mobile-menu-link">About</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Service</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Menu</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Contact</a></li>
 
+     </ul>
+    
+</div>
     </main>
+    <script src="./js/modal.js"></script>
+ <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
     </body>
 </html>
