--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./sass/main.css">
    
 </head>
+<!---->
 <body>
 
     <!--Header-->
@@ -35,17 +36,47 @@
 </nav>
  <button class="menu-toggle js-open-menu" 
          aria-expanded="false"
-         aria-controls="menu-container"
+         aria-controls="mobile-menu"
          data-menu-button >
-            <svg width="40" height="40" aria-label="переключатель мобильного меню" class="icon-menu">
-        <use href="./images/symbol-defs.svg#icon-menu"></use> 
-            </svg>
+            <svg width="28" height="28" aria-label="переключатель мобильного меню" class="icon-menu">
+        <use href="./images/symbol-defs.svg#icon-menu"></use></svg>
         </button>
 
         </div>
     </header>
+
+    <!--моб меню-->
+<div class="menu-container js-menu-container" id="mobile-menu">
+
+ <button class="menu-toggle js-close-menu"
+         aria-expanded="false"
+         aria-controls="menu-container">
+<svg width="24" height="24" aria-label="переключатель мобильного меню">
+<use class="icon-close-black" href="./images/symbol-defs.svg#icon-close-black"></use></svg></button>
+    <ul class="mobile-menu" >
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Home</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">About</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Service</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Menu</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Contact</a></li>
+
+     </ul>
+    
+</div>
+
+ <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
+    </body>
+</html>
+
+    <!--
     <main>
-        <!--Hero-->
+        <!--Hero--
         <section class="section-hero">
             <div class="container">
             <div class="hero--wrap">
@@ -61,7 +92,7 @@
         </div>
         </section>
 
-        <!--Offerings-->
+        <!--Offerings--
 
         <section class="section-offerings">
             <div class="container-offerings">
@@ -89,7 +120,7 @@
         </div>
         </section>
 
-        <!--Favorites-->
+        <!--Favorites--
 
         <section class="section--favorites">
             <div class="container--favorites">
@@ -108,7 +139,7 @@
                </ul>
             </div>
         </section>
-         <!--Customers-->
+         <!--Customers--
 <section class="section--customers">
     <div class="container--customers">
         <h2 class="customers--header">What our Customers Say</h2>
@@ -141,7 +172,7 @@
      </div>
 </section>
 
-<!--Subscribe-->
+<!--Subscribe--
 <section class="section-subscribe">
     <div class="container-subscribe">
     <div class="subscribe-wrap">
@@ -158,7 +189,7 @@
 </div>
 </section>
 
-<!--Footer-->
+<!--Footer--
 <footer class="section--footer">
 <div class="container--footer">
     <div class="footer-wrap">
@@ -196,33 +227,4 @@
 </div>
 </div>
 </footer>
-<!--моб меню-->
-<div class="menu-container js-menu-container" id="mobile-menu">
 
- <button class="menu-toggle js-close-menu"
-         aria-expanded="false"
-         aria-controls="menu-container">
-
-            <svg width="40" height="40" aria-label="переключатель мобильного меню">
-                <use class="icon-close-black" href="./images/symbol-defs.svg#icon-close-black"></use></svg></button>
-    <ul class="mobile-menu" >
-        <li class="mobile-menu-item"> <a href="index.html" class="mobile-menu-link">Home</a></li>
-        <li class="mobile-menu-item"> <a href="porfolio.html" class="mobile-menu-link">About</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Service</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Menu</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Contact</a></li>
-
-     </ul>
-    
-</div>
-    </main>
-    <script src="./js/modal.js"></script>
- <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="js/mobile-menu.js"></script>
-    </body>
-</html>
