--- a/index.html
+++ b/index.html
@@ -45,38 +45,8 @@
         </div>
     </header>
 
-    <!--моб меню-->
-<div class="menu-container js-menu-container" id="mobile-menu">
-
- <button class="menu-toggle js-close-menu"
-         aria-expanded="false"
-         aria-controls="menu-container">
-<svg width="24" height="24" aria-label="переключатель мобильного меню">
-<use class="icon-close-black" href="./images/symbol-defs.svg#icon-close-black"></use></svg></button>
-    <ul class="mobile-menu" >
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Home</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">About</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Service</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Menu</a></li>
-        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Contact</a></li>
-
-     </ul>
-    
-</div>
-
- <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="js/mobile-menu.js"></script>
-    </body>
-</html>
-
-    <!--
     <main>
-        <!--Hero--
+        <!--Hero-->
         <section class="section-hero">
             <div class="container">
             <div class="hero--wrap">
@@ -92,7 +62,7 @@
         </div>
         </section>
 
-        <!--Offerings--
+        <!--Offerings-->
 
         <section class="section-offerings">
             <div class="container-offerings">
@@ -120,7 +90,7 @@
         </div>
         </section>
 
-        <!--Favorites--
+        <!--Favorites-->
 
         <section class="section--favorites">
             <div class="container--favorites">
@@ -139,7 +109,7 @@
                </ul>
             </div>
         </section>
-         <!--Customers--
+         <!--Customers-->
 <section class="section--customers">
     <div class="container--customers">
         <h2 class="customers--header">What our Customers Say</h2>
@@ -172,7 +142,7 @@
      </div>
 </section>
 
-<!--Subscribe--
+<!--Subscribe-->
 <section class="section-subscribe">
     <div class="container-subscribe">
     <div class="subscribe-wrap">
@@ -189,7 +159,7 @@
 </div>
 </section>
 
-<!--Footer--
+<!--Footer-->
 <footer class="section--footer">
 <div class="container--footer">
     <div class="footer-wrap">
@@ -227,4 +197,31 @@
 </div>
 </div>
 </footer>
+ <!--моб меню-->
+<div class="menu-container js-menu-container" id="mobile-menu">
 
+ <button class="menu-toggle js-close-menu"
+         aria-expanded="false"
+         aria-controls="menu-container">
+<svg width="24" height="24" aria-label="переключатель мобильного меню">
+<use class="icon-close-black" href="./images/symbol-defs.svg#icon-close-black"></use></svg></button>
+    <ul class="mobile-menu" >
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Home</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">About</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Service</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Menu</a></li>
+        <li class="mobile-menu-item"> <a href="" class="mobile-menu-link">Contact</a></li>
+
+     </ul>
+    
+</div>
+
+ <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
+    </body>
+</html>
