--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
 
         <div class="container-header">
-        <a href="" class="header--logo">
+        <a href="" class="header--logo footer--logo">
         <img src="./images/logo.svg" alt="">
         </a>
 <nav class="header__nav">
@@ -163,9 +163,9 @@
 <footer class="section--footer">
 <div class="container--footer">
     <div class="footer-wrap">
-    <div class="footer-wrap-logo">
-        <a href="" class="header--logo">
-        <img src="./images/logo.svg" alt="">
+    <div class="logo__container--footer">
+        <a href="./index.html" class="logo__link logo__link--header">
+        <img src="./images/logo.svg" alt="logo" class="logo__img">
         </a>
 <nav class="nav-footer">
     <ul class="footer-nav-list">
