--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <li class="list-policy-item"> <a href="" class="list-policy-link">Cookies Setting</a></li>
 
 </ul>
-<p class="footer-text">2022 FoodSta. All right reserved.</p>
+<p class="footer-text-policy">2022 FoodSta. All right reserved.</p>
 </div>
 </div>
 </footer>
