--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="container-header">
         <a href="" class="header--logo footer--logo">
-        <img src="./images/logo.svg" alt="">
+        <img src="./images/logo.svg" alt="logo" class="logo__img">
         </a>
 <nav class="header__nav">
     <ul class="header__nav--list">
